crates/es-fluent-manager-embedded/tests/ui/define_i18n_module_args.rs
es_fluent_manager_embedded::define_i18n_module!(unexpected);

fn main() {}
